Extrude has proportional editing turned on all the time in the latest build resetting to factory defaults doesn't help #64010

Closed
opened 2019-04-30 10:54:46 +02:00 by Chingiz Jumagulov · 15 comments

System Information
Operating system: Windows 10 64-bit
Graphics card: Nvidia Geforce GTX 1070 8 gb Vram

Blender Version
Broken: blender-2.80.0-git.546e20f5a2c0-windows64
Worked: blender-2.80.0-git.b46245470f79-windows64
Also worked fine with yesterday's build (April 29th)

Short description of error
Hello, wonderful Blender devs! I have encountered weirdest bug ever imagined. As soon as I downloaded today's build I've encountered weirdness with the way extrude function works. It seems that extrude function now has proportional editing turned on all the time without the ability to turn it off! I have tried resetting Blender to factory defaults and the error persists =((.

I have made a video with commentaries:
Proportional_Editing.flv

Exact steps for others to reproduce the error
Open any file,
go to edit mode
start extruding any object, whether it's a face, vertex, edge
See that proportional edit is on all the time preventing you from having normal extrusion

See video for details:
Proportional_Editing.flv

I don't know if it's happening only on my machine, but that's weirdest thing ever =)).

**System Information** Operating system: Windows 10 64-bit Graphics card: Nvidia Geforce GTX 1070 8 gb Vram **Blender Version** Broken: blender-2.80.0-git.546e20f5a2c0-windows64 Worked: blender-2.80.0-git.b46245470f79-windows64 Also worked fine with yesterday's build (April 29th) **Short description of error** Hello, wonderful Blender devs! I have encountered weirdest bug ever imagined. As soon as I downloaded today's build I've encountered weirdness with the way extrude function works. It seems that extrude function now has proportional editing turned on all the time without the ability to turn it off! I have tried resetting Blender to factory defaults and the error persists =((. I have made a video with commentaries: [Proportional_Editing.flv](https://archive.blender.org/developer/F6994641/Proportional_Editing.flv) **Exact steps for others to reproduce the error** Open any file, go to edit mode start extruding any object, whether it's a face, vertex, edge See that proportional edit is on all the time preventing you from having normal extrusion See video for details: [Proportional_Editing.flv](https://archive.blender.org/developer/F6994641/Proportional_Editing.flv) I don't know if it's happening only on my machine, but that's weirdest thing ever =)).

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

#64022 was marked as duplicate of this issue

#64022 was marked as duplicate of this issue

#64013 was marked as duplicate of this issue

#64013 was marked as duplicate of this issue

Added subscriber: @DotBow

Added subscriber: @DotBow

Same bug with Duplicate Linked (Alt + D) - proportional editing is turning on.

Same bug with Duplicate Linked (Alt + D) - proportional editing is turning on.

In #64010#668388, @DotBow wrote:
Same bug with Duplicate Linked (Alt + D) - proportional editing is turning on.

Great! It's not just something weird happening on my machine then!

> In #64010#668388, @DotBow wrote: > Same bug with Duplicate Linked (Alt + D) - proportional editing is turning on. Great! It's not just something weird happening on my machine then!

Added subscriber: @JonDoe286

Added subscriber: @JonDoe286

Can confirm. Happening on Blender-2.80 546e20f5a2c0-Win64. Extrude Shortcut/Tool doesn't "Extrude" (duplicate & move) face(s) as usual. But acts more like a proportional edit + move action. Proportional Editing Strength is force-set to 1.00 under Extrude settings?

Rolled back to Blender-2.80 047081841113-win64. And everything works as intended. :)

Can confirm. Happening on Blender-2.80 546e20f5a2c0-Win64. Extrude Shortcut/Tool doesn't **"Extrude"** *(duplicate & move)* face(s) as usual. But acts more like a proportional edit + move action. Proportional Editing Strength is force-set to 1.00 under Extrude settings? Rolled back to Blender-2.80 047081841113-win64. And everything works as intended. :)
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2019-04-30 11:54:46 +02:00
Member

Confirmed, @ideasman42 : mind checking?

Confirmed, @ideasman42 : mind checking?
Member

Added subscriber: @RobertS

Added subscriber: @RobertS

This issue was referenced by 40b66ac2a6

This issue was referenced by 40b66ac2a654809f518b3df91c5af2111013cb4d

Added subscriber: @Zeirus

Added subscriber: @Zeirus
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @DeepakV

Added subscriber: @DeepakV
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64010
No description provided.